# griffin

./: .gitignore  Cargo.toml  README.md  flake.nix  result  rust-toolchain.toml
.github/workflows/: release.yaml  test.yaml
docs/: dependency_size.md  faqs.md  flow.md  hot_config_reload.md  hot_update_config.md
griffin/: .gitignore  Cargo.toml  default_config.yaml
griffin-core/: CHANGELOG.md  Cargo.toml
griffin-core/src/: README.md  lib.rs
griffin-core/src/core/: grpc_kind.rs  grpc_kind_plain.rs  grpc_kind_web.rs  mod.rs
griffin-core/src/telemetry/: metrics.rs
griffin-test/: Cargo.toml  build.rs
griffin-test/src/: lib.rs
griffin-test/src/test_support/: mod.rs  preparation.rs
griffin-test/tests/: grpc_server_streaming_call_test.rs  grpc_unary_call_test.rs  grpc_web_server_streaming_call_test.rs  grpc_web_unary_call_test.rs
griffin/src/: lib.rs  main.rs
griffin/src/args/: args.rs
griffin/src/config/: config.rs  controller.rs  loader.rs  manager.rs  mod.rs  reload_channel.rs  store.rs  watcher.rs
griffin/src/connection/: connection_handler.rs  mod.rs  proxy_connection_handler.rs
griffin/src/listener/: manager.rs
griffin/src/proxy/: mod.rs  proxy_instance.rs  proxy_supervisor.rs
griffin/src/stream_handler/: stream_handler.rs
src/: main.rs  status.rs
src/grpcweb/: call.rs  grpc_header.rs  mod.rs
src/metadata/: map.rs  mod.rs  value.rs
