[workspace]
members = ["griffin", "griffin-core", "griffin-test"]
resolver = "3"

[workspace.package]
version = "0.0.4"
authors = ["Dat Vo <vo9312@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/exajoy/griffin"
repository = "https://github.com/exajoy/griffin"

[workspace.dependencies]
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tracing = { version = "0.1.41", features = ["log"] }
async-stream = "0.3.6"
bytes = "1.10.1"
futures-core = { version = "0.3.31", features = ["std"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["capi"] }
hyper-util = { version = "0.1.17", features = [
  "http1",
  "http2",
  "client",
  "server",
  "service",
] }
futures-util = { version = "0.3.31", features = ["std"] }
prometheus = "0.14.0"
scopeguard = "1.2.0"


[profile.release]
codegen-units = 1
lto = true

# [profile.dev]
# codegen-units = 256
# debug = 0
# incremental = true
[profile.dev]
opt-level = 0
debug = true
