[package]
name = "griffin-core"
version = "0.1.0"
edition = "2024"

[dependencies]

hyper.workspace = true
hyper-util.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures-core.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true

futures-util.workspace = true

prometheus.workspace = true
scopeguard.workspace = true

tokio.workspace = true
tower.workspace = true
tracing.workspace = true
