[package]
name = "griffin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core function"

[dependencies]

hyper.workspace = true
hyper-util.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures-core.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true

futures-util.workspace = true

prometheus.workspace = true
scopeguard.workspace = true

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
tracing.workspace = true
once_cell = "1.21.3"
