[package]
name = "griffin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Commandline interface for Griffin"

[dependencies]
griffin-core = { path = "../griffin-core" }

clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

hyper.workspace = true
hyper-util.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures-core.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
futures-util.workspace = true
prometheus.workspace = true
scopeguard.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower.workspace = true
tracing.workspace = true
arc-swap = "1.7.1"
once_cell = "1.21.3"
anyhow = "1.0.100"
notify = "8.2.0"
tempfile = "3.23.0"


# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = "z"
# panic = "abort"
# strip = true

# [profile.dev]
# opt-level = 0
# debug = true
